app/css/modal.styl
/* ... */
#container.extra {
  &.show-methods {
    #partial-back {
      display: block;
    }
    #form-common .legend {
      padding: 48px 0 6px;
    }
  }
  #pad-common {
    & + div {
      display: none;
    }
  }
}

#container.extra, #container.emandate-extra {
  #next-button {
    opacity: 1;
    color: #fff;
    margin-bottom: -1px;
    cursor: pointer;
    z-index: 1;
    transform: translateY(0);
  }
}

.elem-state {
  padding-top: 0;
  select[disabled] {
    opacity: .75;
  }
}
#elem-wrap-address {
  margin-bottom: 21px;
}

#container.no-details, #container.extra.show-methods {
  #pad-common + div {
    display: block;
  }
  #pad-common,
  #top-right,
  #next-button  {
    display: none;
  }
  #form-common {
    padding-top: 0;
    left: 20px;
    right: 20px;
    width: auto;
  }
  .legend {
    text-align: left;
  }
}

#container.emandate, #container.no-details, #container.extra.show-methods {
  .desc {
    display: block;
    color: #777;
    font-size: 12px;
    white-space: nowrap;
    overflow: hidden;
  }
  #payment-options, #emandate-options {
    border: 1px solid #eee;
    border-radius: 2px;
    background: #f9fafb;
    label {
      padding: 12px 0;
      height: 56px;
      line-height: 16px;
    }
    .payment-option.item {
      width: auto;
      float: none;
      border: 0;
      text-align: left;
      i {
        float: left;
        font-size: 32px;
        margin: 2px 16px;
        line-height: 30px;
      }
      &+.item {
        border-top: 1px solid $bc;
      }
    }
  }
}

#container.emandate {
  #payment-options, #emandate-options {
    label {
      &:after {
        content: '\e604';
        position: absolute;
        right: 16px;
        top: 20px;
        transform: scaleX(-1);
        color: #777;
      }
    }
  }
}

#partial-select-partial + .checkbox {
  float: left;
  top: 1px;
  margin-right: 8px;
}

#partial-select-partial:not(:checked) + .checkbox + #elem-wrap-amount {
  display: none;
}

.partial-payment-block {
  .subtitle {
    display: block;
  }

  #elem-wrap-amount, .subtitle {
    margin-left: 26px;
  }

  #amount-value {
    padding-top: 7px;
    opacity: 1;
  }
}

#quickpay-btn {
  display: none;
  opacity: 0;
  pointer-events: none;
  transition: 0.2s;
  position: fixed;
  bottom: $footerh;
  left: 0
  right: 0;
  z-index: 1;
  background: #FCFCFC;
  border: 1px solid rgba(0,0,0,0.08);
  color: #666666;
  font-size: 14px;
  margin-bottom: 0;

  .checkbox {
    position: absolute;
    top: 14px;
    left: 16px;
  }

  label {
    padding-left: 44px;
    border: 0;
  }
}

.multi-tpv
  .legend
    text-align: left
  :checked + label
    z-index: 1
  label
    display: block
    border: 1px solid #eee
    padding: 8px 12px
    margin-top: -1px
    .label-content
      font-weight: bold
      padding-bottom: 0
  svg, img
    width: 22px
    height: 22px
    float: left
    margin: 8px 14px 0 0
  .radio-display
    right: 12px
  span
    font-size: 12px
    color: #666

.multi-tpv-header
  font-size: 12px
  text-transform: uppercase
  letter-spacing: 0.25px
  margin-bottom: 5px

